--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using HL7ResultsGateway.Client
 @using HL7ResultsGateway.Client.Layout
+@using HL7ResultsGateway.Client.Shared
+@using HL7ResultsGateway.Client.Pages
