--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using HL7ResultsGateway.Client
-@using HL7ResultsGateway.Client.Layout
+@using HL7ResultsGateway.Client.Features.Shared.Layout
+@using HL7ResultsGateway.Client.Features.Authentication.Components
