--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net.Http
+﻿@* Global using statements for all components *@
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -8,5 +9,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using HL7ResultsGateway.Client
-@using HL7ResultsGateway.Client.Features.Shared.Layout @using HL7ResultsGateway.Client.Features.Authentication.Components
+@using HL7ResultsGateway.Client.Features.Shared.Layout
+@using HL7ResultsGateway.Client.Features.Authentication.Components
 
+@* Feature-specific imports are handled in each feature's _Imports.razor file *@
+@* This provides better organization and reduces unnecessary namespace pollution *@
