--- a/src/Client/Features/Shared/Layout/MainLayout.razor
+++ b/src/Client/Features/Shared/Layout/MainLayout.razor
@@ -24,6 +24,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/dashboard">Dashboard</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/hl7/testing">
+                            <i class="fa fa-flask me-1" aria-hidden="true"></i>
+                            HL7 Testing
+                        </a>
+                    </li>
                 </ul>
                 <LoginDisplay />
                 <ThemeSwitcher />
